Rename HTML file to index.html for better naming convention

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <div class="container">
-        <a href="mihris-kraamzorg-layout-pro-always-send-welcome-fixed-icons-ig-clean.html" class="back-link">← Terug naar website</a>
+        <a href="index.html" class="back-link">← Terug naar website</a>
         
         <h1>Privacy Policy</h1>
         <p class="date">Laatst bijgewerkt: December 2024</p>
@@ -144,7 +144,7 @@
             </p>
         </div>
 
-        <a href="mihris-kraamzorg-layout-pro-always-send-welcome-fixed-icons-ig-clean.html" class="back-link">← Terug naar website</a>
+        <a href="index.html" class="back-link">← Terug naar website</a>
     </div>
 </body>
 </html>
