Herstel aanmeldformulier en voeg bedankt pagina toe

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -139,7 +139,7 @@
             <p><strong>Mihri's Kraamzorg</strong><br>
             Voor vragen over deze privacy policy of over de verwerking van uw persoonlijke gegevens kunt u contact met ons opnemen:</p>
             <p>
-                E-mail: <a href="mailto:info@mihri-kraamzorg.nl">info@mihri-kraamzorg.nl</a><br>
+                E-mail: <a href="mailto:mihriskraamzorg@hotmail.com">mihriskraamzorg@hotmail.com</a><br>
                 Telefoon: <a href="tel:+31612345678">+31612345678</a>
             </p>
         </div>
