Update emailadres naar mihriskraamzorg@hotmail.com in contact sectie

--- a/index.html
+++ b/index.html
@@ -1014,7 +1014,7 @@ header {
 <p style="margin: 0 0 15px 0;"><strong>📞 Bel direct:</strong><br>
 <a href="tel:+31612345678" style="color: var(--ink); text-decoration: none; font-size: 1.1em;">06 12 34 56 78</a></p>
 <p style="margin: 0 0 15px 0;"><strong>✉️ E-mail:</strong><br>
-<a href="mailto:info@mihri-kraamzorg.nl" style="color: var(--ink); text-decoration: none;">info@mihri-kraamzorg.nl</a></p>
+<a href="mailto:mihriskraamzorg@hotmail.com" style="color: var(--ink); text-decoration: none;">mihriskraamzorg@hotmail.com</a></p>
 <p style="margin: 0;"><strong>📝 Of gebruik het contactformulier hieronder</strong></p>
 </div>
 </div>
